% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/sfsmisc/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{sfsmisc}}
\encoding{UTF-8}

%%% TODO:
      %% \item New \code{rDatetime()} for random date/time sequences
      %% within a specified time range.
\section{CHANGES in sfsmisc VERSION 1.1-8 [2021-01-06]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{isRshared()} has been \dQuote{factorized out} of
      \code{sessionInfoX()}, as it maybe useful elsewhere, e.g., in
      \code{\link{Startup}} code setting \code{\link{.libPaths}()}.

      \item New utilities \code{pkgDesc()} and \code{pkgBuilt()}, giving
      named \code{character} result of \code{packageDescription()}.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{sessionInfoX()}'s \code{isRshared()} is now based on
      \code{tools::Rcmd()} instead of \code{system()}, so possibly slightly
      more portable.

      \item Fixed not-yet--as-cran \file{NOTE} about undeclared packages in Rd xrefs.
    }
  }
}
\section{CHANGES in sfsmisc VERSION 1.1-7 [2020-05-05]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{eaxis()} gets new option \code{equidist.at.tol = 0.002},
      previously hardwired to 0.001.

      \item \code{seqXtend(<Date>, *, "interpolate")} now also works with
      changed \code{base::c.Date()} from R(4.1.0)-devel.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-6 [2020-04-04]}{
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{pkgLibs()} now works on macOS, thanks to a hint by
      Brian Ripley.
    }
  }
}

\section{CHANGES in sfsmisc VERSION 1.1-5 [2020-02-06]}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item on Unix-alikes export new \code{pkgLibs()} utility even though
      its API may change.
    }
  }
  \subsection{Tweaks}{
    \itemize{
      \item replace \code{class(.) != ".."} in a \emph{comment}, just for
      source code purity ;-)
    }
  }